# toad

./: .gitignore  ABOUT_THIS_TEMPLATE.md  CONTRIBUTING.md  Containerfile  MANIFEST.in  Makefile  README.md  check.py  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  template.jinja2
.github/: rename_project.sh
.github/workflows/: main.yml  release.yml
check_examples/: motus_pipeline_test.py
dump/: cli.py  models.py
examples/motus_pipeline/: entries.txt  motus_pipeline.jinja2  motus_pipeline_check.py
tests/: test_base.py
toad/: __main__.py  base.py  cli.py  importer.py  models.py
