[project]
name = "toad"
version = "0.1.0"
description = "Toad. Simple and extensible task execution and logging."
url = "https://github.com/mberacochea/toad/"
authors = ["mberacochea"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.mypy]
ignore_missing_imports = true
